--- a/Front/package.json
+++ b/Front/package.json
@@ -2,27 +2,29 @@
   "name": "P12_TAYLOR_HEATHER",
   "version": "0.1.0",
   "private": false,
-  "homepage" : "https://htaylor91.github.io/P12_TAYLOR_Heather",
+  "homepage": "https://htaylor91.github.io/P12_TAYLOR_Heather",
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
+    "jsdoc": "^4.0.2",
+    "prop-types": "^15.8.1",
+    "better-docs": "github:SoftwareBrothers/better-docs#pull/242",
     "recharts": "^2.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "docs": "jsdoc -c jsdoc.conf.json",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +47,7 @@
   "devDependencies": {
     "eslint-plugin-react-hooks": "latest",
     "gh-pages": "^5.0.0",
-    "jsdoc": "^4.0.2",
-    "prop-types": "^15.8.1"
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.2.0"
   }
 }
