--- a/Front/package.json
+++ b/Front/package.json
@@ -5,31 +5,27 @@
   "homepage": "https://htaylor91.github.io/P12_TAYLOR_Heather",
   "type": "module",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "better-docs": "github:njetsy/better-docs-jsdoc4#chore/jsdoc4-update",
+    "jsdoc": "^4.0.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
-    "jsdoc": "^4.0.2",
-    "prop-types": "^15.8.1",
-    "better-docs": "github:SoftwareBrothers/better-docs#pull/242",
-    "recharts": "^2.4.3",
-    "web-vitals": "^2.1.4"
+    "recharts": "^2.5.0"
   },
   "scripts": {
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "docs": "jsdoc -c jsdoc.conf.json",
+    "docs": "jsdoc -c jsdoc.json",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react",
+      "react-app"
     ]
   },
   "browserslist": {
@@ -45,9 +41,12 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.31",
+    "@vitejs/plugin-react": "^3.1.0",
+    "buffer": "^5.7.1",
     "eslint-plugin-react-hooks": "latest",
     "gh-pages": "^5.0.0",
-    "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.2.0"
+    "vite": "^4.2.1",
+    "vite-plugin-eslint": "1.8.1"
   }
 }
