--- a/Front/package.json
+++ b/Front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "homepage": "https://htaylor91.github.io/P12_TAYLOR_Heather",
+  "main": "index.html",
   "type": "module",
   "dependencies": {
     "axios": "^1.3.4",
@@ -20,7 +21,7 @@
     "preview": "vite preview",
     "docs": "jsdoc -c jsdoc.json",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
