--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "P12_TAYLOR_HEATHER",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://htaylor91.github.io/P12_TAYLOR_Heather",
+  "homepage": "https://taylorfullstack.github.io/P12_TAYLOR_Heather",
   "type": "module",
   "dependencies": {
     "axios": "^1.3.4",
